# coveralls-cmake-example

./: .travis.yml  CMakeLists.txt  README.md  complicated.c  complicated.h
test/: TEST_complicated.c
